docs/envoy/v1.18.2/_sources/api-v3/extensions/filters/listener/tls_inspector/v3/tls_inspector.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/listener/tls_inspector/v3/tls_inspector.proto:

TLS Inspector Filter
====================


.. _extension_envoy.filters.listener.tls_inspector:

This extension may be referenced by the qualified name *envoy.filters.listener.tls_inspector*

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.listener <extension_category_envoy.filters.listener>`

Allows detecting whether the transport appears to be TLS or plaintext.

.. _envoy_v3_api_msg_extensions.filters.listener.tls_inspector.v3.TlsInspector:

extensions.filters.listener.tls_inspector.v3.TlsInspector
---------------------------------------------------------

`[extensions.filters.listener.tls_inspector.v3.TlsInspector proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/extensions/filters/listener/tls_inspector/v3/tls_inspector.proto#L16>`_




